# mailimporter

./: .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  mailimporter.categories  mailimporter.renamecategories  metainfo.yaml
autotests/: CMakeLists.txt  filterclawsmailtest.cpp  filterclawsmailtest.h  filtericedovetest.cpp  filtericedovetest.h  filterimporterakonaditest.cpp  filtersylpheedtest.cpp  filtersylpheedtest.h  filterthunderbirdtest.cpp  filterthunderbirdtest.h  messagestatustest.cpp  messagestatustest.h
po/af/: libmailimporter.po  libmailimporter6.po
po/ar/: libmailimporter.po  libmailimporter6.po
po/ast/: libmailimporter.po  libmailimporter6.po
po/be/: libmailimporter.po  libmailimporter6.po
po/bg/: libmailimporter.po  libmailimporter6.po
po/br/: libmailimporter.po  libmailimporter6.po
po/bs/: libmailimporter.po  libmailimporter6.po
po/ca/: libmailimporter.po  libmailimporter6.po
po/ca@valencia/: libmailimporter.po  libmailimporter6.po
po/cs/: libmailimporter.po  libmailimporter6.po
po/cy/: libmailimporter.po  libmailimporter6.po
po/da/: libmailimporter.po  libmailimporter6.po
po/de/: libmailimporter.po  libmailimporter6.po
po/el/: libmailimporter.po  libmailimporter6.po
po/en_GB/: libmailimporter.po  libmailimporter6.po
po/eo/: libmailimporter.po  libmailimporter6.po
po/es/: libmailimporter.po  libmailimporter6.po
po/et/: libmailimporter.po  libmailimporter6.po
po/eu/: libmailimporter.po  libmailimporter6.po
po/fa/: libmailimporter.po  libmailimporter6.po
po/fi/: libmailimporter.po  libmailimporter6.po
po/fr/: libmailimporter.po  libmailimporter6.po
po/fy/: libmailimporter.po  libmailimporter6.po
po/ga/: libmailimporter.po  libmailimporter6.po
po/gl/: libmailimporter.po  libmailimporter6.po
po/he/: libmailimporter.po  libmailimporter6.po
po/hi/: libmailimporter.po  libmailimporter6.po
po/hne/: libmailimporter.po  libmailimporter6.po
po/hr/: libmailimporter.po  libmailimporter6.po
po/hsb/: libmailimporter.po  libmailimporter6.po
po/hu/: libmailimporter.po  libmailimporter6.po
src/: CMakeLists.txt  Messages.sh  filterbalsa.cpp  filterbalsa.h  filterclawsmail.cpp  filterclawsmail.h  filterevolution_v2.cpp  filterevolution_v3.cpp  filterevolution_v3.h  filtericedove.cpp  filtericedove.h  filterimporterakonadi.cpp  filterimporterakonadi.h  filterimporterbase.cpp  filterimporterbase.h  filterinfo.cpp  filterinfo.h  filterinfogui.cpp  filterinfogui.h  filterkmail_maildir.cpp  filterkmail_maildir.h  filterkmailarchive.cpp  filtermailmangzip.cpp  filtermailmangzip.h  filteropera.cpp  filterpmail.cpp  filters.cpp  filters.h  filtersylpheed.cpp  filtersylpheed.h  filterthebat.cpp  filterthebat.h  filterthunderbird.cpp  filterthunderbird.h  importmailswidget.cpp  importmailswidget.h  mailimporter_utils.h  messagestatus.h  othermailerutil.cpp  othermailerutil.h  (+2 more)
src/mailimporter/: CMakeLists.txt  KF5MailImporterConfig.cmake.in  KPimMailImporterConfig.cmake.in  filterimporterbase.cpp  filterimporterbase.h  filterinfo.cpp  filterinfo.h  filterinfogui.cpp  filterinfogui.h  filters.cpp  filters.h  importmailswidget.cpp  importmailswidget.h  mailimporter-index.qdoc  mailimporter.qdoc  mailimporter.qdocconf  mailimporter_private_export.h  mailimporter_utils.h  messagestatus.cpp  messagestatus.h  othermailerutil.cpp  othermailerutil.h  selectthunderbirdprofilewidget.cpp  selectthunderbirdprofilewidget.h
src/mailimporter/autotests/: CMakeLists.txt  filterbalsamailtest.cpp  filterbalsamailtest.h  filterclawsmailtest.cpp  filterclawsmailtest.h  filtericedovetest.cpp  filtericedovetest.h  filterimporterakonaditest.h  filterimportertest.cpp  filterimportertest.h  filterimportertestutil.cpp  filterimportertestutil.h  filterlnotestest.cpp  filterlnotestest.h  filtermailapptest.cpp  filtermailapptest.h  filtermailmangziptest.cpp  filtermailmangziptest.h  filtermboxtest.cpp  filtermboxtest.h  filterplaintest.cpp  filterplaintest.h  filtersylpheedtest.cpp  filtersylpheedtest.h  filterthebattest.cpp  filterthebattest.h  filterthunderbirdtest.cpp  filterthunderbirdtest.h  messagestatustest.cpp  messagestatustest.h  selectthunderbirdprofiledialogtest.cpp  selectthunderbirdprofiledialogtest.h
src/mailimporter/filters/: filterbalsa.cpp  filterbalsa.h  filterclawsmail.cpp  filterclawsmail.h  filterevolution.cpp  filterevolution.h  filterevolution_v2.cpp  filterevolution_v2.h  filterevolution_v3.cpp  filterevolution_v3.h  filtericedove.cpp  filtericedove.h  filterkmail_maildir.cpp  filterkmail_maildir.h  filterkmailarchive.cpp  filterkmailarchive.h  filterlnotes.cpp  filterlnotes.h  filtermailapp.cpp  filtermailapp.h  filtermailmangzip.cpp  filtermailmangzip.h  filtermbox.cpp  filtermbox.h  filteroe.cpp  filteroe.h  filteropera.cpp  filteropera.h  filterplain.cpp  filterplain.h  filterpmail.cpp  filterpmail.h  filterseamonkey.cpp  filterseamonkey.h  filtersylpheed.cpp  filtersylpheed.h  filterthebat.cpp  filterthebat.h  filterthunderbird.cpp  filterthunderbird.h
src/mailimporter/ui/: importmailswidget.ui
src/mailimporterakonadi/: CMakeLists.txt  KF5MailImporterAkonadiConfig.cmake.in  KPimMailImporterAkonadiConfig.cmake.in  filterimporterakonadi.cpp  filterimporterakonadi.h  filterimportertestutil.cpp  filterimportertestutil.h
src/mailimporterakonadi/autotests/: CMakeLists.txt  filterbalsamailtest.cpp  filterbalsamailtest.h  filterclawsmailtest.cpp  filterclawsmailtest.h  filtericedovetest.cpp  filtericedovetest.h  filterimporterakonaditest.cpp  filterimporterakonaditest.h  filterimportertest.cpp  filterimportertest.h  filterimportertestutil.cpp  filterimportertestutil.h  filterlnotestest.cpp  filterlnotestest.h  filtermailapptest.cpp  filtermailapptest.h  filtermailmangziptest.cpp  filtermailmangziptest.h  filtermboxtest.cpp  filtermboxtest.h  filterplaintest.cpp  filterplaintest.h  filtersylpheedtest.cpp  filtersylpheedtest.h  filterthebattest.cpp  filterthebattest.h  filterthunderbirdtest.cpp  filterthunderbirdtest.h
src/mailimporterakonadi/autotests/samples/mbox/: cygwin.mbox
(+124 files in other folders)
